# LaTeX-Resume-Builder

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  options.example.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  OVERLEAF.md  SUBMODULE.md  USAGE.md
examples/: resume-en.tex  resume-fr.tex
scripts/: compile_latex.py  convert_and_merge.py  generate_qr_code.py  load_yaml.py
site/: index.html
style/: resume.sty
tests/: tests.py
tests/resources/: options-missing-paths.yml  options-valid.yml
